@@ -220,7 +220,7 @@ elif [ "$COMMAND" = "application" ] ||
 elif [ "$COMMAND" = "node" ] ; then
   CLASS=org.apache.hadoop.yarn.client.cli.NodeCLI
   YARN_OPTS="$YARN_OPTS $YARN_CLIENT_OPTS"
-elif [ "COMMAND" = "queue" ] ; then
+elif [ "$COMMAND" = "queue" ] ; then
   CLASS=org.apache.hadoop.yarn.client.cli.QueueCLI
   YARN_OPTS="$YARN_OPTS $YARN_CLIENT_OPTS"
 elif [ "$COMMAND" = "resourcemanager" ] ; then
